--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html {
+  background-color: #f1f1f1;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  padding: 40px;
+}
+
+h1 {
+  font-size: 1.5rem;
+}
+
+#form-page {
+  text-align: left;
+}
+
+input[type="submit"], button, a, a > * {
+  cursor: pointer;
+}
+
+label {
+  /* display: block; */
+  margin-top: 30px;
+  padding-bottom: 5px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  text-align: left;
+  font-size: .9rem;
+}
+
+input, select {
+  padding: 10px 15px;
+}
+
+.btn {
+  border: 1px solid black;
+  padding: 10px 20px;
+  margin-top: 30px;
+}
+
+.btn-primary {
+
 }
