--- a/src/index.css
+++ b/src/index.css
@@ -58,3 +58,53 @@ input, select {
   margin: 10px;
   padding: 6px 22px 8px 22px;
 }
+
+#outfit-preview {
+  position: relative;
+  max-width: 900px;
+  height: 80vh;
+  overflow: hidden;
+  /* background-color: red; */
+}
+
+#outfit-preview img {
+  position: absolute;
+  border-radius: 40px;
+  max-width: 100%;
+  cursor: crosshair;
+  /* mix-blend-mode: lighten; */
+  mix-blend-mode: multiply;
+}
+
+#outfit-preview img:hover {
+  mix-blend-mode: normal;
+  z-index: 5!important;
+}
+
+#outfit-preview img.tops {
+  z-index: 3;
+  left: 5%;
+  width: 40%;
+}
+
+#outfit-preview img.bottoms {
+  width: 60%;
+  z-index: 1;
+  top: 20%;
+  right: 5%;
+}
+
+#outfit-preview img.footwear {
+  z-index: 2;
+  left: 15%;
+  width: 30%;
+  height: auto;
+  bottom: 5%;
+}
+
+#outfit-preview img.one-pieces {
+  left: 10%;
+  top: 10%;
+  width: 80%;
+  z-index: 1;
+}
