--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,81 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300;400;500;600;700&display=swap');
+
 html {
-  background-color: #f1f1f1;
 }
 
 body {
-  /* padding: 40px; */
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
 }
 
-/* h1 {
-  font-size: 1.5rem;
+h1 {
+  font-family: 'Quicksand', serif;
+  font-weight: 300;
+  font-weight: light!important;
+}
+
+/*** NAVBAR ***/
+
+.navbar-avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 2px;
+}
+
+/*** HOMEPAGE ***/
+
+#banner {
+  background-image: url('./assets/main-banner.jpg');
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 250px 0;
+}
+
+.required {
+  color: #dc3545;
+  font-size: .7rem;
+  text-transform: capitalize;
+  margin-left: 5px;
+}
+
+label {
+  display: inline-flex;
+  align-items: center;
+}
+
+/*** LOGIN PAGE ***/
+
+#login-page {
+  min-height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+/*** DRESSING ***/
+
+.card {
+  border: 0;
+}
+
+.occasions-tags {
+  display: inline-block;
+  background-color: aliceblue;
+  font-weight: normal;
+  text-transform: uppercase!important;
+  font-size: .8rem;
+  letter-spacing: 1px;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+
+.occasions-tags + .occasions-tags {
+  margin-left: 8px;
+}
+
+/* .card img {
+  mix-blend-mode: multiply;
 } */
 
 #form-page {
@@ -19,12 +87,10 @@ input[type="submit"], button, a, a > * {
 }
 
 label {
-  /* display: block; */
-  margin-top: 30px;
-  padding-bottom: 5px;
+  margin-top: 20px;
+  padding-bottom: 8px;
   text-transform: uppercase;
   letter-spacing: 1px;
-  text-align: left;
   font-size: .9rem;
 }
 
@@ -32,33 +98,9 @@ input, select {
   padding: 10px 15px;
 }
 
-/* .btn {
-  border: 1px solid black;
-  padding: 10px 20px;
-  margin-top: 30px;
+input[type="file"] {
+  padding: 0;
 }
-
-.btn-primary {
-
-} */
-
-.occasions-list-item + .occasions-list-item::before {
-  content: ' | ';
-}
-
-.selected {
-  background-color: #333;
-  color: white;
-}
-
-#random-generator-form p {
-  cursor: pointer;
-  display: inline-block;
-  border-radius: 50px;
-  margin: 10px;
-  padding: 6px 22px 8px 22px;
-}
-
 
 /* VIEW OUTFIT PAGE */
 
@@ -66,8 +108,6 @@ input, select {
   margin: auto;
   position: relative;
   height: 70vh;
-  /* overflow: hidden; */
-  /* background-color: red; */
 }
 
 #view-outfit-page .item {
@@ -81,42 +121,6 @@ input, select {
 #view-outfit-page .item img {
   width: 100%;
   height: auto;
-}
-
-#view-outfit-page > div:hover {
-  /* mix-blend-mode: normal; */
-}
-
-#view-outfit-page .tops {
-  /* z-index: 3; */
-  /* left: 0; */
-  /* width: 40%; */
-  /* height: 400px;
-  width: 500px; */
-}
-
-#view-outfit-page .bottoms {
-  /* width: 60%; */
-  /* z-index: 1; */
-  /* top: 20%;
-  left: 60%; */
-  /* height: 650px;
-  width: 400px; */
-}
-
-#view-outfit-page .footwear {
-  /* z-index: 2; */
-  /* left: 15%;
-  bottom: 0; */
-  /* height: 300px;
-  width: 300px; */
-}
-
-#view-outfit-page .one-pieces {
-    /* left: 10%;
-    top: 10%; */
-  /* width: 80%;
-  z-index: 1; */
 }
 
 #view-outfit-page .item-infos {
