--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300;400;500;600;700&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
 
 html {
@@ -11,8 +11,8 @@ body {
 }
 
 h1 {
-  font-family: 'Quicksand', serif;
-  font-weight: 300;
+  font-family: 'Lora', 'Quicksand', serif;
+  font-weight: 100;
   font-weight: light!important;
 }
 
@@ -24,6 +24,14 @@ h1 {
   border-radius: 2px;
 }
 
+/*** MAIN ***/
+
+#main {
+  margin-left: 280px;
+  min-height: 100vh;
+  transition: all 2s;
+}
+
 /*** HOMEPAGE ***/
 
 #banner {
@@ -31,11 +39,16 @@ h1 {
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
-  padding: 250px 0;
+  min-height: 75vh;
+  color: white;
+}
+
+#features .sep {
+  border-top: 1px solid rgba(0, 0, 0, .3);
 }
 
 .required {
-  color: #dc3545;
+  color: tomato;
   font-size: .7rem;
   text-transform: capitalize;
   margin-left: 5px;
@@ -45,6 +58,224 @@ label {
   display: inline-flex;
   align-items: center;
 }
+
+/*** LINKS ***/
+
+nav a {
+  color: #333!important;
+}
+
+nav a:hover {
+  color: #abc5ae!important;
+  transition-duration: 0.4s;
+}
+
+.mobile-menu {
+  display: none;
+  font-size: xx-large;
+}
+
+#sidebar {
+  z-index: 10;
+  width: 280px;
+  height: 100vh;
+  position: fixed;
+  margin: 0;
+  padding: 0;
+}
+
+.sidebar-desktop {
+  height: 100%;
+  background-color: #f0f5f1;
+  transition: all 2s;
+}
+
+.sidebar-mobile {
+  position: absolute;
+  transition: all 2s;
+}
+
+.sidebar-mobile .mobile-menu-icon {
+  display: none;
+}
+
+.sidebar-mobile h1 {
+  line-height: 0px;
+}
+
+a.personal-shopper {
+  background-color: #7A9E7E;
+  color: white!important;
+  border-radius: 2px;
+  padding-bottom: 0;
+  transition: all 1s;
+}
+
+a.personal-shopper:hover {
+  background-color: #66926b;
+  color: white!important;
+  transform: translateY(-8px);
+}
+
+/*** BUTTONS ***/
+
+.bg-primary { background-color: #cbdbcd!important; }
+.border-primary { border-color: #cbdbcd!important; }
+
+#banner .btn {
+  color: white;
+  border-color: white
+}
+
+#banner .btn:hover {
+  background-color: transparent!important;
+  color: white!important;
+  border-color: white!important;
+}
+
+.btn {
+  border-radius: 2px;
+}
+
+.btn.active {
+  background-color: #b6ceb8;
+  border: 1px solid #b6ceb8;
+  border: 0;
+}
+
+.btn-primary {
+  background-color: transparent;
+  border: 1px solid rgba(0, 0, 0, .4);
+  color: black;
+  padding: 10px 40px;
+  border-radius: 0;
+  font-weight: 300;
+  transition: all ease-in 0.2s;
+}
+
+#banner .btn-primary:hover {
+  border: 1px solid rgba(0, 0, 0, .4);
+  color: black;
+  background-color: transparent;
+  transform: translateY(-8px) scale(1.05);
+}
+
+.btn-primary:hover {
+  border: 1px solid rgba(0, 0, 0, .4);
+  background-color: black!important;
+  color: white;
+  background-color: transparent;
+}
+
+.btn-secondary {
+  background-color: #b6ceb8;
+  border: 1px solid #b6ceb8;
+  border: 0;
+}
+
+.btn-secondary:hover {
+  background-color: #abc5ae;
+  border: 1px solid #b6ceb8;
+  border: 0;
+  transition: all ease-in .5s;
+}
+
+.btn-danger {
+  background-color: transparent;
+  border: 1px solid tomato!important;
+  color: tomato;
+  padding: 10px 40px;
+  border: 0;
+}
+
+.btn-danger:hover {
+  background-color: tomato;
+  border: 1px solid tomato;
+  border: 0;
+  transition: all ease-in .5s;
+}
+
+.btn-info {
+  background-color: #f1e8ca;
+  border: 1px solid #f1e8ca!important;
+  color: #333;
+  border: 0;
+}
+
+.btn-info:hover {
+  background-color: #f1e8ca;
+  border: 1px solid #f1e8ca;
+  border: 0;
+  color: #333;
+  transition: all ease-in .3s;
+}
+
+.btn-outline-info {
+  background-color: transparent;
+  border: 1px solid #f1e8ca!important;
+  color: #d3cbb1;
+  border: 0;
+}
+
+.btn-outline-info:hover {
+  background-color: #f1e8ca;
+  border: 1px solid #f1e8ca;
+  color: #333;
+  transition: all ease-in .3s;
+}
+
+.btn-info:active {
+  background-color: #f1e8ca!important;
+  border: 1px solid #f1e8ca!important;
+}
+
+.btn-outline-info:active {
+  background-color: #f1e8ca!important;
+  border: 1px solid #f1e8ca!important;
+}
+
+.btn-outline-secondary {
+  background-color: transparent;
+  border: 1px solid #b6ceb8;
+  color: #b6ceb8;
+}
+
+.btn-outline-secondary:hover {
+  background-color: #abc5ae;
+  border: 0;
+  border: 1px solid #abc5ae;
+  transition: all ease-in .5s;
+}
+
+.badge {
+  border-radius: 80px;
+  margin-left: 8px;
+}
+
+.bg-info {
+  background-color: #f1e8ca!important;
+  color: #333;
+}
+
+/*** FOOTER ***/
+
+#footer h6 {
+  font-size: 1rem;
+}
+
+#footer ul {
+  padding-left: 0;
+  margin-left: 0;
+}
+
+#footer li {
+  list-style-type: none;
+  padding-left: 0;
+  margin-left: 0;
+  line-height: 1.5rem;
+  font-size: .8rem!important;
+}
+
 
 /*** LOGIN PAGE ***/
 
@@ -63,22 +294,18 @@ label {
 
 .occasions-tags {
   display: inline-block;
-  background-color: aliceblue;
+  background-color: #f1e8ca;
   font-weight: normal;
   text-transform: uppercase!important;
   font-size: .8rem;
   letter-spacing: 1px;
   padding: 5px 10px;
-  border-radius: 5px;
+  border-radius: 2px;
 }
 
 .occasions-tags + .occasions-tags {
   margin-left: 8px;
 }
-
-/* .card img {
-  mix-blend-mode: multiply;
-} */
 
 #form-page {
   text-align: left;
@@ -104,7 +331,34 @@ input[type="file"] {
   padding: 0;
 }
 
+/*** CARD ACTIONS ***/
+
+.card-actions {
+  position: absolute;
+  display: flex;
+  align-items: baseline;
+  z-index: 2;
+}
+
+.save-outfit-card .outfit-card {
+  transition: all .5s;
+}
+
+.save-outfit-card:hover .edit-outfit-icon {
+  transform-origin: center center!important;
+  transform-style: preserve-3d;
+}
+
+.save-outfit-card:hover .edit-outfit-icon {
+  transform-style: preserve-3d;
+  transform: rotate(280deg) ;
+}
+
 /* VIEW OUTFIT PAGE */
+
+.outfit-preview {
+  margin-top: -10%;
+}
 
 #view-outfit-page {
   margin: auto;
@@ -145,4 +399,29 @@ input[type="file"] {
 #view-outfit-page .item-infos button {
   width: fit-content;
   margin: 0 auto;
+}
+
+@media screen and (max-width: 1200px) {
+  .outfit-preview { margin-top: 0; }
+}
+
+@media screen and (max-width: 768px) {
+  .desktop-menu { display: none!important; }
+  .mobile-menu { display: initial!important; }
+  .outfit-preview { margin-top: 0; }
+  .sidebar-desktop { translate: -280px; }
+  #main { margin-left: 0; margin-top: 80px; }
+  
+  #sidebar.open > .sidebar-desktop {
+    transform: translate(280px);
+  }
+
+  #sidebar .mobile-menu-icon {
+    display: initial;
+    transition: all 2s;
+  }
+
+  #sidebar.open .mobile-menu-icon {
+    margin-left: 260px;
+  }
 }
